--- a/Exercício/index.html
+++ b/Exercício/index.html
@@ -5,27 +5,58 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
+    <script type="text/javascript">
+        var progresso = 0;
+
+        var intervalo = setInterval(function() {
+            progresso += 2;
+            document.getElementById('progresso').style.width = progresso + "%";
+
+            if(progresso == 150) {
+                clearInterval(intervalo);
+                document.getElementById('container').style.display = "block";
+                document.getElementById('alerta').style.display = "block";
+                document.getElementById('progressoBarra').style.display = "none";
+            }
+        }, 50);
+    </script>
 </head>
 <body>
-    <div class="containet-fluid">
+    <div id="progressoBarra" class="progress">
+        <div id="progresso" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 0%;">
+        </div>
+    </div>
+
+    <div id="alerta" class="alert alert-success alert-dismissible fade in" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">×</span>
+        </button>
+
+        <strong>Nova mensagem!</strong> - Seria uma pena se fosse spam...
+    </div>
+
+    <div id="container" class="container">
         <div class="col-md-12" id="cabecalho">
             <h1>ColtecMAIL</h1>
             <img class="foto" src="foto.jpg" alt="">
         </div>
+
         <div class="col-md-3" id="msg">
             <h2> Mensagens</h2>
             <button class="btn btn-primary" type="button" style="margin-bottom: 4px;"> Mensagens <span class="badge">3</span></button><br/>
             <button class="btn btn-primary" type="button" style="margin-bottom: 4px;"> Eviadas <span class="badge">0</span></button><br/>
             <button class="btn btn-primary" type="button" style="margin-bottom: 4px;"> Lixeira <span class="badge">1</span></button><br/>
         </div>
+
         <div class="col-md-9" id="conteudo">
-            <p style="text-align: center; font-size: 30px; font-style: italic"><b>Campo da mensagem</b></p>
+            <p style="text-align: center; font-size: 20px;"><span class="label label-primary">Novo</span><span class="label label-success">Artes</span><span class="label label-danger">Importante</span><b>Assunto: Odé ao DAW</b></p>
                 <div id="campo">
                     <p class="mensagem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio asperiores quaerat possimus optio fugiat inventore, eveniet quos, laudantium aspernatur! Voluptas officiis laborum officia in aliquid cumque distinctio ratione neque temporibus.</p><br/>
                     <p class="mensagem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae molestias fugit modi facilis magnam fuga, tempore expedita ut eius, cum eveniet odit soluta quod, hic labore placeat deleniti reprehenderit! Aperiam.</p><br/>
                 </div>
         </div>
     </div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Bootstrap -->
